--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation "io.springfox:springfox-boot-starter:3.0.0"
+	compileOnly("io.springfox:springfox-swagger-ui:3.0.0")
+
 
 	implementation 'mysql:mysql-connector-java:8.0.32'
 	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
