--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sakachelas?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Pa$$w0rd
 
-
+server.servlet.context-path=/sakachelas/api
+springdoc.swagger-ui.path=/test
+springdoc.api-docs.path=/api-docs
 
