--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
+#General
 server.port=8090
 
+#Database
 spring.datasource.url=jdbc:mysql://localhost:3306/sakachelas?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Pa$$w0rd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#Documentation
 server.servlet.context-path=/sakachelas/api
 springdoc.swagger-ui.path=/test
 springdoc.api-docs.path=/api-docs
+
+
 
