--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,7 @@ server.servlet.context-path=/sakachelas/api
 springdoc.swagger-ui.path=/test
 springdoc.api-docs.path=/api-docs
 
+hibernate.enable_lazy_load_no_trans=true
+
 
 
