--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sakachelas?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Pa$$w0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+#update DB
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 #Documentation
 server.servlet.context-path=/sakachelas/api
 springdoc.swagger-ui.path=/test
