About to configure pages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.show-sql=true
 server.servlet.context-path=/sakachelas/api
 springdoc.swagger-ui.path=/test
 springdoc.api-docs.path=/api-docs
-
 hibernate.enable_lazy_load_no_trans=true
+logging.level.org.springframework.security.web.*=Debug
 
 
 
