--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,14 @@ springdoc.swagger-ui.path=/test
 springdoc.api-docs.path=/api-docs
 hibernate.enable_lazy_load_no_trans=true
 logging.level.org.springframework.security.web.*=Debug
+#mailTo
+spring.mail.host=smtp.office365.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail-smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 
